--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,12 +45,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-
 	<key>NSPhotoLibraryUsageDescription</key>
-    <string></string>
-    <key>NSCameraUsageDescription</key>
-    <string></string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string></string>
+	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string></string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
+	</array>
 </dict>
 </plist>
