--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^1.0.4
   http_parser: ^4.0.0
   cached_network_image: ^3.3.0
+  #  카카오
+  kakao_flutter_sdk: ^1.7.0
 
 
 
