--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   cached_network_image: ^3.3.0
   #  카카오
   kakao_flutter_sdk: ^1.7.0
-
+  # convert
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
