--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   dio: ^5.3.2
   http: 0.13.4
   flutter_secure_storage: ^5.0.2
@@ -48,7 +50,7 @@ dependencies:
   #  카카오
   kakao_flutter_sdk: ^1.7.0
   # convert
-  intl: ^0.17.0
+  intl: ^0.18.1
   # 물결 페이지 전환
   liquid_swipe: ^3.1.0
 
