--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   intl: ^0.18.1
   # 물결 페이지 전환
   liquid_swipe: ^3.1.0
+  # firebase
+  firebase_core: ^2.24.2
+  firebase_in_app_messaging: ^0.7.4+8
 
 
   # The following adds the Cupertino Icons font to your application.
