[2023.12.26] googleMap 연동 위한 사전 작업

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,5 +56,7 @@
 		<string>kakaokompassauth</string>
 		<string>kakaolink</string>
 	</array>
+	<key>NSLLocationWhenInUseUsageDescription</key>
+	<string>유저 위치를 가져와도 될까요?</string>
 </dict>
 </plist>
