--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,8 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+def googleMapApiKey = localProperties.getProperty('google.map.key')
+
 android {
     namespace "com.example.wepick_project"
     compileSdkVersion flutter.compileSdkVersion
@@ -49,6 +51,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifetstPlaceholder["googleMapApiKey"]=googleMapApiKey
     }
 
     buildTypes {
