--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   image_picker: ^1.0.4
   http_parser: ^4.0.0
   cached_network_image: ^3.3.0
+  # 구글 맵 플러터
+  google_maps_flutter: ^2.0.1
+  # 사용자 위치 정보
+  geolocator: ^10.1.0
   #  카카오
   kakao_flutter_sdk: ^1.7.0
   # convert
