--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   # firebase
   firebase_core: ^2.24.2
   firebase_in_app_messaging: ^0.7.4+8
+  # icon
+  font_awesome_flutter: ^10.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
