--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,14 @@ dependencies:
   riverpod_annotation: ^2.3.1
   http_interceptor: ^1.0.1
   go_router: ^7.0.1
-  image_picker: ^1.0.4
   http_parser: ^4.0.0
   cached_network_image: ^3.3.0
+
+  # Picker
+  #  day_night_time_picker: ^1.3.0+1
+  image_picker: ^1.0.4
   # 구글 맵 플러터
-  google_maps_flutter: ^2.0.1
+  # google_maps_flutter: ^2.0.1
   # 사용자 위치 정보
   geolocator: ^10.1.0
   #  카카오
