--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,8 @@ dependencies:
   cached_network_image: ^3.3.0
 
   # Picker
-  #  day_night_time_picker: ^1.3.0+1
   image_picker: ^1.0.4
-  # 구글 맵 플러터
-  # google_maps_flutter: ^2.0.1
+
   # 사용자 위치 정보
   geolocator: ^10.1.0
   #  카카오
@@ -66,6 +64,15 @@ dependencies:
   # icon
   font_awesome_flutter: ^10.6.0
 
+  # Not Use
+  # ====================================
+  # >> DatePicker
+  #   day_night_time_picker: ^1.3.0+1
+  # >> 구글 맵 플러터
+  # google_maps_flutter: ^2.0.1
+  # >> 트리뷰
+  #  flutter_treeview: ^1.0.7+1
+  #  flutter_simple_treeview: ^3.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
