[2024.01.07] 리슈 카드 생성

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,8 @@ flutter:
   assets:
     - assets/img/logo/logo.png
     - assets/img/logo/codefactory_logo.png
+    - assets/img/hall/
+    - assets/img/hall/hestia.png
     - assets/img/user/
     - assets/img/user/my_profile.jpeg
   #   - images/a_dot_ham.jpeg
