[2024.01.09] 리뷰 작성 드롭 다운 버튼 생성

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   firebase_in_app_messaging: ^0.7.4+8
   # icon
   font_awesome_flutter: ^10.6.0
+  # dropdown_button2:
+  dropdown_button2: ^2.3.9
 
   # Not Use
   # ====================================
