[2024.01.09] 웨딩홀 리뷰 작성 페이지 작업

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   # dropdown_button2:
   dropdown_button2: ^2.3.9
+  # 점수 bar
+  flutter_rating_bar: ^4.0.1
 
   # Not Use
   # ====================================
